# planets

./: .gitignore  CLAUDE.md  CMakeLists.txt  clang21-toolchain.cmake  clang22-toolchain.cmake  fetch_solar_system.py
app/: main.cpp  solar_system.h  trails.cpp  trails.h  visualization.cpp  visualization.h
include/: plummer.h  simulator.h
src/: simulator.cpp
tests/: CMakeLists.txt  test_plummer.cpp  test_simulator.cpp
